# ai-web-crawler

./: README.md  config.py  main.ipynb  pyproject.toml
utils/: data_classes.py  data_utils.py  scraper_utils.py
