[project]
name = "ai-web-crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "groq>=0.22.0",
    "Crawl4AI==0.4.247",
    "python-dotenv>=1.0.1",
    "pydantic>=2.10.6",
    "pandas>=2.2.3",
    "matplotlib>=3.10.1",
    "pyqt5>=5.15.11",
    "ipython>=9.0.2",
    "pip>=25.0.1",
]
